--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hjs": "~0.0.6",
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
+    "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.5"
   }
 }
